@@ -11,5 +11,49 @@
 
     <artifactId>savestate</artifactId>
 
+    <properties>
+        <commons-io.version>2.6</commons-io.version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>eu.kgorecki</groupId>
+            <artifactId>userinterface</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <!-- tests -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Spec.*</include>
+                    </includes>
+                    <argLine>
+                        --add-opens eu.kgorecki.rpgame.savestale/eu.kgorecki.rpgame.savestale=ALL-UNNAMED
+                        --add-opens eu.kgorecki.rpgame.savestale/eu.kgorecki.rpgame.savestale.infrastructure=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
 </project>
